--- a/style.css
+++ b/style.css
@@ -1,4 +1,21 @@
 body { font-size: 16px }
 p { font-weight: bold }
 span { color: red }
-img { float: right }
+
+#partners {
+  height: 105px;
+  background-color: #eee;
+  white-space: nowrap;
+  width: 100%;
+  display: table;
+}
+
+.logo-image {
+  vertical-align: middle;
+  padding: 13px;
+  display: table-cell;
+}
+
+.logo-image img {
+  max-width: 100%;
+}
